pom refactoring